Flex wrap fix

--- a/src/containers/About/slices/Columns/Columns.css
+++ b/src/containers/About/slices/Columns/Columns.css
@@ -1,5 +1,6 @@
 .about__columns {
   margin: 10vh auto!important;
+  flex-wrap: wrap;
 }
 
 .about__columns__col {
